--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node app.js",
-    "start-server": "node app.js"
+    "start": "nodemon app.js",
+    "start-server": "nodemon app.js"
   },
   "repository": {
     "type": "git",
@@ -17,5 +17,9 @@
   "bugs": {
     "url": "https://github.com/pmy09/Node-JS/issues"
   },
-  "homepage": "https://github.com/pmy09/Node-JS#readme"
+  "homepage": "https://github.com/pmy09/Node-JS#readme",
+  "dependencies": {},
+  "devDependencies": {
+    "nodemon": "^2.0.6"
+  }
 }
