--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "url": "https://github.com/pmy09/Node-JS/issues"
   },
   "homepage": "https://github.com/pmy09/Node-JS#readme",
-  "dependencies": {},
+  "dependencies": {
+    "express": "^4.17.1"
+  },
   "devDependencies": {
     "nodemon": "^2.0.6"
   }
